Revert "Change builder repo/branch to test this PR and https://github.com/pytorch/builder/pull/1786"
This reverts commit a1e3a36a695618aa4cf6a044103e05c963443415.

--- a/.github/workflows/_binary-build-linux.yml
+++ b/.github/workflows/_binary-build-linux.yml
@@ -187,9 +187,9 @@ jobs:
       - name: Checkout pytorch/builder to builder dir
         uses: malfet/checkout@silent-checkout
         with:
-          ref: build_cu124_patch
+          ref: main
           submodules: recursive
-          repository: nWEIdia/builder
+          repository: pytorch/builder
           path: builder
           quiet-checkout: true
 
