--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -36,6 +36,20 @@ jobs:
   #
   # Experimental ARC jobs
   #
+  llm-td:
+    name: before-test
+    uses: ./.github/workflows/llm_td_retrieval.yml
+    permissions:
+      id-token: write
+      contents: read
+
+  target-determination:
+    name: before-test
+    uses: ./.github/workflows/target_determination.yml
+    needs: llm-td
+    permissions:
+      id-token: write
+      contents: read
 
   linux-jammy-py3_8-gcc11-build:
     name: linux-jammy-py3.8-gcc11
