--- a/.github/workflows/_check-user.yml
+++ b/.github/workflows/_check-user.yml
@@ -11,6 +11,10 @@ on:
         required: true
         type: string
         description: Current branch.
+      issue_number:
+        required: true
+        type: string
+        default: "5132"
 
     outputs:
       workflow-type:
@@ -24,6 +28,7 @@ jobs:
       workflow-type: ${{ steps.set-condition.outputs.workflow-type }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ISSUE_NUMBER: ${{ inputs.issue_number }}
     steps:
       - name: Check if user is in arc_users.yml
         id: set-condition
@@ -36,7 +41,7 @@ jobs:
           else
             REPO_OWNER="pytorch"
             REPO_NAME="test-infra"
-            ISSUE_NUMBER="5132"
+            ISSUE_NUMBER="$ISSUE_NUMBER"
 
             COMMENTS=$(curl -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/issues/$ISSUE_NUMBER/comments")
             USER_LIST=$(echo "$COMMENTS" | tr -d '\r\n' | jq '.[0].body' -r)
