--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -52,14 +52,14 @@ jobs:
       docker-image-name: pytorch-linux-jammy-py3.8-gcc11
       test-matrix: |
         { include: [
-          { config: "default", shard: 1, num_shards: 3, runner: "linux.2xlarge" },
-          { config: "default", shard: 2, num_shards: 3, runner: "linux.2xlarge" },
-          { config: "default", shard: 3, num_shards: 3, runner: "linux.2xlarge" },
-          { config: "docs_test", shard: 1, num_shards: 1,  runner: "linux.2xlarge" },
-          { config: "jit_legacy", shard: 1, num_shards: 1, runner: "linux.2xlarge" },
-          { config: "backwards_compat", shard: 1, num_shards: 1, runner: "linux.2xlarge" },
-          { config: "distributed", shard: 1, num_shards: 2, runner: "linux.2xlarge" },
-          { config: "distributed", shard: 2, num_shards: 2, runner: "linux.2xlarge" },
+          { config: "default", shard: 1, num_shards: 3, runner: "arc-lf-linux.2xlarge.avx512" },
+          { config: "default", shard: 2, num_shards: 3, runner: "arc-lf-linux.2xlarge.avx512" },
+          { config: "default", shard: 3, num_shards: 3, runner: "arc-lf-linux.2xlarge.avx512" },
+          { config: "docs_test", shard: 1, num_shards: 1,  runner: "arc-lf-linux.2xlarge.avx512" },
+          { config: "jit_legacy", shard: 1, num_shards: 1, runner: "arc-lf-linux.2xlarge.avx512" },
+          { config: "backwards_compat", shard: 1, num_shards: 1, runner: "arc-lf-linux.2xlarge.avx512" },
+          { config: "distributed", shard: 1, num_shards: 2, runner: "arc-lf-linux.2xlarge.avx512" },
+          { config: "distributed", shard: 2, num_shards: 2, runner: "arc-lf-linux.2xlarge.avx512" },
         ]}
 
   linux-jammy-py3_8-gcc11-build-label:
@@ -84,7 +84,7 @@ jobs:
 
   linux-jammy-py3_8-gcc11-test-rg:
     name: linux-jammy-py3.8-gcc11-rg
-    uses: ./.github/workflows/_linux-test.yml
+    uses: ./.github/workflows/_linux-test-rg.yml
     needs:
       - linux-jammy-py3_8-gcc11-build-rg
       - target-determination
@@ -95,7 +95,7 @@ jobs:
 
   linux-jammy-py3_8-gcc11-test-label:
     name: linux-jammy-py3.8-gcc11-label
-    uses: ./.github/workflows/_linux-test.yml
+    uses: ./.github/workflows/_linux-test-label.yml
     needs:
       - linux-jammy-py3_8-gcc11-build-label
       - target-determination
