--- a/.github/workflows/_runner-determinator.yml
+++ b/.github/workflows/_runner-determinator.yml
@@ -36,11 +36,13 @@ jobs:
         with:
           fetch-depth: 1
           submodules: true
+
+      - name: Install dependencies
+        run: python3 -m pip install urllib3==2.2.1 PyGithub==2.3.0
+
       - name: Get the workflow type for the current user
         id: set-condition
         run: |
-          python3 -m pip install urllib3==1.25.11 PyGithub==2.3.0
-
           curr_branch="${{ inputs.curr_branch }}"
           echo "Current branch is '$curr_branch'"
 
