--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -147,7 +147,11 @@ caffe2/utils/hip @jeffdaily @jithunnair-amd
 
 # CUDA and CUDA math libraries
 aten/src/ATen/cuda/ @eqy
+aten/src/ATen/cudnn/ @eqy
 aten/src/ATen/native/cuda/ @eqy
 aten/src/ATen/native/cudnn/ @eqy
 c10/cuda @eqy
 torch/cuda/ @eqy
+torch/csrc/cuda/ @eqy
+torch/backends/cuda/ @eqy
+torch/backends/cudnn/ @eqy
