--- a/.github/workflows/_win-test.yml
+++ b/.github/workflows/_win-test.yml
@@ -118,6 +118,10 @@ jobs:
         continue-on-error: true
         uses: ./.github/actions/download-td-artifacts
 
+      - name: Parse ref
+        id: parse-ref
+        run: python3 .github/scripts/parse_ref.py
+
       - name: Get workflow job id
         id: get-job-id
         uses: ./.github/actions/get-workflow-job-id
@@ -150,6 +154,7 @@ jobs:
         timeout-minutes: ${{ fromJson(steps.test-timeout.outputs.timeout) }}
         env:
           USE_CUDA: ${{ inputs.cuda-version != 'cpu' && '1' || '0' }}
+          BRANCH: ${{ steps.parse-ref.outputs.branch }}
           INSTALL_WINDOWS_SDK: 1
           PYTHON_VERSION: 3.8
           CONTINUE_THROUGH_ERROR: ${{ steps.keep-going.outputs.keep-going }}
@@ -221,10 +226,6 @@ jobs:
         if: always() && steps.test.conclusion && steps.test.conclusion != 'skipped'
         with:
           file-suffix: ${{ github.job }}-${{ matrix.config }}-${{ matrix.shard }}-${{ matrix.num_shards }}-${{ matrix.runner }}_${{ steps.get-job-id.outputs.job-id }}
-
-      - name: Parse ref
-        id: parse-ref
-        run: python3 .github/scripts/parse_ref.py
 
       - name: Uninstall PyTorch
         if: always()
