sort: handle onnx test failures
Handle Onnx Test Failure
- Handles onnx test failure by adding parameters in
  torch/onnx/symbolic_opset(9|10|11).py

Handle Backwards Compatibility Issue
- Tensor.sort(true, 0, true) in torchvision calls
  Tensor.sort(int dim, bool descending, bool dynamic_indices_type)
  rather than Tensor.sort(optional<bool> stable, int dim, bool descending)
- It's resolved by changing the function's prototype
  as sort(int dim, bool descending, ScalarType indices_dtype,
          bool dynamic_indices_type)

Add `str == "at::kLong"` in python_arg_parser.cpp.
- `at::kLong` cannot be parsed in
  `python_(variable_methods|torch_functionsEverything|torch_functions_2)`.cpp
   in `autograd/generated` directory
- It's resolved by adding "at::kLong" or-condition to "torch.int64"

Signed-off-by: Taeksang Kim <voidbag@gmail.com>

--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -1580,12 +1580,12 @@
   result: "linalg_solve_jvp(A_t, B_t, result, LU, pivots, left, A_p.is_contiguous() && !A_p.is_complex())"
   output_differentiability: [True, False, False, False]  # LU is an auxiliary tensor not exposed to the user
 
-- name: sort(Tensor self, int dim=-1, bool descending=False, bool dynamic_indices_type=False) -> (Tensor values, Tensor indices)
+- name: sort(Tensor self, int dim=-1, bool descending=False, ScalarType indices_dtype=long, bool dynamic_indices_dtype=False) -> (Tensor values, Tensor indices)
   self: value_selecting_reduction_backward_symint(grad, dim, indices, self.sym_sizes(), true)
   output_differentiability: [True, False]
   values: gather_with_keepdimed_indices(self_t, dim, indices, true)
 
-- name: sort.stable(Tensor self, *, bool? stable, int dim=-1, bool descending=False, bool dynamic_indices_type=False) -> (Tensor values, Tensor indices)
+- name: sort.stable(Tensor self, *, bool? stable, int dim=-1, bool descending=False, ScalarType indices_dtype=long, bool dynamic_indices_dtype=False) -> (Tensor values, Tensor indices)
   self: value_selecting_reduction_backward_symint(grad, dim, indices, self.sym_sizes(), true)
   output_differentiability: [True, False]
   values: gather_with_keepdimed_indices(self_t, dim, indices, true)
