Update on "[skip ci] stable torch library draft"
[ghstack-poisoned]

--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -503,6 +503,7 @@ endif()
 list(APPEND TORCH_SRCS
   ${TORCH_SRC_DIR}/csrc/autograd/FunctionsManual.cpp
   ${TORCH_SRC_DIR}/csrc/utils/out_types.cpp
+  ${TORCH_SRC_DIR}/library_stable_impl.cpp
 )
 
 if(NOT INTERN_DISABLE_AUTOGRAD AND NOT BUILD_LITE_INTERPRETER)
@@ -1259,6 +1260,7 @@ install(FILES
   "${TORCH_SRC_DIR}/extension.h"
   "${TORCH_SRC_DIR}/custom_class.h"
   "${TORCH_SRC_DIR}/library.h"
+  "${TORCH_SRC_DIR}/library_stable.h"
   "${TORCH_SRC_DIR}/custom_class_detail.h"
   DESTINATION ${TORCH_INSTALL_INCLUDE_DIR}/torch)
 if(BUILD_TEST)
